[package]
name = "wgpu_sdl_linker"
version = "1.2.0"
edition = "2021"
description = "A micro library which allows linking wgpu surface into an SDL2 window safely."
authors = ["jordan4ibanez"]
license = "GPL-2.0-or-later"
keywords = ["utility", "simple", "sdl2", "wgpu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["raw-window-handle"] }
wgpu = "0.18.0"
